fix: display gif on mobile
due to iOS restrictions, video tag was not auto playing

--- a/src/styles/components/_rollercoaster.scss
+++ b/src/styles/components/_rollercoaster.scss
@@ -13,7 +13,8 @@
       transform: rotate(315deg);
     }
   }
-  video {
+  video,
+  img {
     border-radius: 50%;
     margin: 0 auto;
     height: 240px;
